[gd_scene load_steps=8 format=3 uid="uid://cu5yob2qrghud"]

[ext_resource type="Script" path="res://scripts/items/item.gd" id="1_u40sg"]
[ext_resource type="Texture2D" uid="uid://iddg5qj73wnr" path="res://textures/sprites/items/bed-red.png" id="2_5kqlb"]
[ext_resource type="AudioStream" uid="uid://dhsef6p5hr5jm" path="res://audio/item-place.wav" id="3_81gne"]
[ext_resource type="Texture2D" uid="uid://cuuyeu0n4rx6m" path="res://textures/sprites/exclamation.png" id="4_a3i6y"]

[sub_resource type="Animation" id="Animation_nsidv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemDepletedExclamation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_ygrgd"]
resource_name = "item_depleted_exclamation"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemDepletedExclamation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 1.5),
"transitions": PackedFloat32Array(0.31864, 1.68179, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, -16), Vector2(0, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4r4s4"]
_data = {
"RESET": SubResource("Animation_nsidv"),
"item_depleted_exclamation": SubResource("Animation_ygrgd")
}

[node name="BaseItem" type="Node2D"]
script = ExtResource("1_u40sg")
cat_state = 5

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_5kqlb")

[node name="PlaceDownAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_81gne")
bus = &"UI"

[node name="ItemDepletedExclamation" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
scale = Vector2(2, 2)
texture = ExtResource("4_a3i6y")

[node name="ItemDepletedAnimation" type="AnimationPlayer" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_4r4s4")
}
autoplay = "item_depleted_exclamation"
