[gd_scene load_steps=5 format=3 uid="uid://be6c65iye7xml"]

[ext_resource type="Script" path="res://scripts/items/item.gd" id="1_4k41d"]
[ext_resource type="Texture2D" uid="uid://irpsjo8wxqwk" path="res://textures/sprites/items/ball-yarn-red.png" id="2_2k86o"]
[ext_resource type="AudioStream" uid="uid://dhsef6p5hr5jm" path="res://audio/item-place.wav" id="3_1gppj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wuvkc"]
size = Vector2(32, 38.5)

[node name="Toy" type="Node2D"]
script = ExtResource("1_4k41d")
cat_state = 6

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_2k86o")

[node name="PlaceDownAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_1gppj")

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2(0, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 11.25)
shape = SubResource("RectangleShape2D_wuvkc")
